fix(header): search results was not overflowing correctly

--- a/src/components/Link/_link.scss
+++ b/src/components/Link/_link.scss
@@ -38,7 +38,7 @@
     &:hover::after,
     &:focus-visible::after {
       background: $pure-black;
-      bottom: 0;
+      bottom: -1px;
       content: '';
       height: 1px;
       left: 0;
